@@ -260,6 +260,7 @@ public class MipTypes : global::System.IDisposable {
     CMD_EF_ADAPTIVE_FILTER_OPTIONS = 0x0D53,
     CMD_EF_MULTI_ANTENNA_OFFSET = 0x0D54,
     CMD_EF_RELATIVE_POSITION_REF = 0x0D55,
+    CMD_EF_LEVER_ARM_OFFSET_REF = 0x0D56,
     CMD_EF_EXTERN_SPEED_UPDATE = 0x0D60,
     CMD_EF_SPEED_MEASUREMENT_OFFSET = 0x0D61,
     CMD_EF_VERTICAL_GYRO_CONSTRAINT = 0x0D62,
